--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,7 +13,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # TEMPORARY: Only test on macOS for speed
+        os: [macos-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -29,14 +30,14 @@ jobs:
 
       - name: Build wheels
         env:
-          CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
+          # TEMPORARY: Only build for Python 3.10 for speed
+          CIBW_BUILD: "cp310-*"
           CIBW_ARCHS_MACOS: "universal2"
         run: |
           python -m cibuildwheel --output-dir dist
 
-      # Build sdist once (only on Linux)
+      # Build sdist
       - name: Build sdist
-        if: matrix.os == 'ubuntu-latest'
         run: |
           python -m build --sdist --outdir dist
 
