--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [build-system]
-requires = ["setuptools>=61", "wheel", "Cython>=0.29.0"]
+requires = ["setuptools>=61,<69", "wheel", "Cython>=0.29.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "pkrbot"
-version = "1.0.16"
+version = "1.0.17"
 description = "Fast poker hand evaluation library with eval7-compatible API"
 readme = "README.md"
 requires-python = ">=3.8"
-license = "MIT"
+license = {text = "MIT"}
 authors = [{name = "Bobby Costin"}]
 keywords = ["poker", "hand evaluation", "eval7", "cards", "game", "pokerbots"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
