--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,8 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TEMPORARY: Only test on macOS for speed
-        os: [macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v4
@@ -30,8 +29,7 @@ jobs:
 
       - name: Build wheels
         env:
-          # TEMPORARY: Only build for Python 3.10 for speed
-          CIBW_BUILD: "cp310-*"
+          CIBW_BUILD: "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
           CIBW_ARCHS_MACOS: "universal2"
         run: |
           python -m cibuildwheel --output-dir dist
